--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
                   <i class="fab fa-html5 fa-3x"></i>
                 <i class="fab fa-css3-alt fa-3x"></i>
                 <i class="fab fa-js fa-3x"></i>
+                <i class="fab fa-react fa-3x"></i>
                 <i class="fab fa-sass fa-3x"></i>
                 <i class="fab fa-python fa-3x"></i>
             </div>
