--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
                         <!-- Slider for projects -->
                         <div class="slider" id="slider">
                             <div class="holder">
-                              <div class="slide" id="slide-0"><span class="temp"><a href=http://dicegame.shackdev.com/>High Roller</span></div>
+                              <div class="slide" id="slide-0"><span class="temp">High Roller</span>
+                                <!-- <a href=http://dicegame.shackdev.com/> -->
+                            </div>
                               <div class="slide" id="slide-1"><span class="temp">Project 2</span></div>
                               <div class="slide" id="slide-2"><span class="temp">Project 3</span></div>
                               <div class="slide" id="slide-2"><span class="temp">Project 4</span></div>
