--- a/index.html
+++ b/index.html
@@ -85,16 +85,14 @@
                         <!-- Slider for projects -->
                         <div class="slider" id="slider">
                             <div class="holder">
-                              <div class="slide" id="slide-0"><span class="temp">High Roller</span>
-                                <!-- <a href=http://dicegame.shackdev.com/> -->
-                            </div>
-                              <div class="slide" id="slide-1"><span class="temp">Project 2</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 3</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 4</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 6</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 7</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 8</span></div>
-                              <div class="slide" id="slide-2"><span class="temp">Project 9</span></div>
+                              <div class="slide" id="slide-0"><span class="temp">Shift Reporter</span></div>
+                              <div class="slide" id="slide-1"><span class="temp">BrewDog API</span></div>
+                              <div class="slide" id="slide-2"><a href=http://dicegame.shackdev.com/><span class="temp">High Roller</span></div>
+                              <div class="slide" id="slide-3"><span class="temp">Inspector Morse Code Translator</span></div>
+                              <div class="slide" id="slide-4"><span class="temp">Project 6</span></div>
+                              <div class="slide" id="slide-5"><span class="temp">Project 7</span></div>
+                              <div class="slide" id="slide-6"><span class="temp">Project 8</span></div>
+                              <div class="slide" id="slide-7"><span class="temp">Project 9</span></div>
                             </div>
                           </div>
                     </div>
