--- a/index.html
+++ b/index.html
@@ -87,18 +87,22 @@
                             <div class="holder">
                               <div class="slide" id="slide-0"><span class="temp">Shift Reporter</span></div>
                               <div class="slide" id="slide-1"><span class="temp">BrewDog API</span></div>
-                              <div class="slide" id="slide-2"><a href=http://dicegame.shackdev.com/><span class="temp">High Roller</span></div>
-                              <div class="slide" id="slide-3"><span class="temp">Inspector Morse Code Translator</span></div>
-                              <div class="slide" id="slide-4"><span class="temp">Project 6</span></div>
-                              <div class="slide" id="slide-5"><span class="temp">Project 7</span></div>
-                              <div class="slide" id="slide-6"><span class="temp">Project 8</span></div>
-                              <div class="slide" id="slide-7"><span class="temp">Project 9</span></div>
+                              <div class="slide" id="slide-2"><a href=http://dicegame.shackdev.com/ target="_blank"><span class="temp">High Roller</span></div>
+                                <!-- <p>High Roller is a JS dice game which uses math.random to generate dice rolls<i class="fab fa-js fa-1x"></i> </p> -->
+                              <div class="slide" id="slide-3"><a href=http://inspector-morse-code-translator.shackdev.com/ target="_blank"><span class="temp">Inspector Morse Code Translator</span></div>
+                              <div class="slide" id="slide-4"><span class="temp">Project 5</span></div>
+                              <div class="slide" id="slide-5"><span class="temp">Project 6</span></div>
+                              <div class="slide" id="slide-6"><span class="temp">Project 7</span></div>
+                              <div class="slide" id="slide-7"><span class="temp">Project 8</span></div>
+                              <div class= "slider-stopper">
+
+                              </div>
                             </div>
                           </div>
-                    </div>
+                    <!-- </div>
                 </div>
                         </div>
-                    </div>
+                    </div> -->
                     <div class="About">
                     <a id="about-me"></a>
                     <!-- <p class="replaceStrings" data-typeit-id="0audxoqg9e9u"><b style="color:#f3340d;">Scroll</b> to continue <span class="ti-cursor" style="display:inline;position:relative;font:inherit;color:inherit;line-height:inherit;">|</span></p> -->
@@ -172,10 +176,10 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
                     <input placeholder="Your Email Address" type="email" tabindex="2" required>
                   </fieldset>
                   <fieldset>
-                    <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3" required>
+                    <input placeholder="Your Phone Number (optional)" type="tel" tabindex="3">
                   </fieldset>
                   <fieldset>
-                    <input placeholder="Your Web Site (optional)" type="url" tabindex="4" required>
+                    <input placeholder="Your Web Site (optional)" type="url" tabindex="4">
                   </fieldset>
                   <fieldset>
                     <textarea placeholder="Type your message here...." tabindex="5" required></textarea>
