power button fixed-on/off

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <!-- Slider for projects -->
                         <div class="slider" id="slider">
                             <div class="holder">
-                              <div class="slide" id="slide-0"><span class="temp">Shift Reporter</span></div>
+                              <div class="slide" id="slide-0"><a href=https://shiftreporter-3420e.web.app/ target="_blank"></a><span class="temp">Shift Reporter</span></div>
                               <div class="slide" id="slide-1"><span class="temp">BrewDog API</span></div>
                               <div class="slide" id="slide-2"><a href=http://dicegame.shackdev.com/ target="_blank"><span class="temp">High Roller</span></div>
                                 <!-- <p>High Roller is a JS dice game which uses math.random to generate dice rolls<i class="fab fa-js fa-1x"></i> </p> -->
