Fixed LinkedIn link

--- a/index.html
+++ b/index.html
@@ -151,8 +151,7 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
                             
                             
                             <a
-                                href="www.linkedin.com/in/
-                                steve-shackleton-43900aa4"
+                                href="http://linkedin.com/in/steve-shackleton-43900aa4"
                                 target="_blank"
                                 ><i class="fab fa-linkedin fa-3x"></i
                             ></a>
