fixed form auto-focus attribute that was causing page to load on contact section

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
             <div class="container">  
                 <form id="contact" action="" method="post">
                   <fieldset>
-                    <input placeholder="Your name" type="text" tabindex="1" required autofocus>
+                    <input placeholder="Your name" type="text" tabindex="1" required >
                   </fieldset>
                   <fieldset>
                     <input placeholder="Your Email Address" type="email" tabindex="2" required>
