media queries need work

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <title>Steve Shackleton</title>
         <script
             src="https://kit.fontawesome.com/21668e4100.js"
-            crossorigin="anonymous"
-        ></script>
+            crossorigin="anonymous"></script>
         <link rel="icon" href="./favicon.ico" type="image/x-icon" />
         <link
             href="https://fonts.googleapis.com/css?family=Chivo:300,700|Playfair+Display:700i"
