--- a/index.html
+++ b/index.html
@@ -81,22 +81,7 @@
                         <h2 class="neon-heading first"><span class="flickering-2">PROJECTS</span><span class="flickering-1"></span><br><span class="flickering-3"></span></h2>
                     <h2 class="neon-heading-second"></h2>
                         <p class="typewriter">Browse through some of my completed projects below:</p> </div>
-                        <!-- Slider for projects -->
-                        <!-- <div class="slider" id="slider">
-                            <div class="holder">
-                              <div class="slide" id="slide-0"><a href=https://shiftreporter-3420e.web.app/ target="_blank"></a><span class="temp">Shift Reporter</span></div>
-                              <div class="slide" id="slide-1"><span class="temp">BrewDog API</span></div>
-                              <div class="slide" id="slide-2"><a href=http://dicegame.shackdev.com/ target="_blank"><span class="temp">High Roller</span></div>
-                                <!-- <p>High Roller is a JS dice game which uses math.random to generate dice rolls<i class="fab fa-js fa-1x"></i> </p> -->
-                              <!-- <div class="slide" id="slide-3"><a href=http://inspector-morse-code-translator.shackdev.com/ target="_blank"><span class="temp">Inspector Morse Code Translator</span></div>
-                              <div class="slide" id="slide-4"><span class="temp">Project 5</span></div>
-                              <div class="slide" id="slide-5"><span class="temp">Project 6</span></div>
-                              <div class="slide" id="slide-6"><span class="temp">Project 7</span></div>
-                              <div class="slide" id="slide-7"><span class="temp">Project 8</span></div>
-                              <div class= "slider-stopper">
-                              </div>
-                            </div>
-                          </div> --> 
+
                           <section class= "card-list">
                             <article class= "card">
                                 <header class="card-header">
@@ -200,9 +185,9 @@
                         <h2 class="neon-heading first"><span class="flickering-1">ABOUT</span><br><span class="flickering-2">ME</span></h2> 
                     </article>
                     <article id="about-box">
-                        <p class="line-1 anim-typewriter">
-                            Hi I'm Steve Shackleton 👋 
-Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬..
+                        <br></br>
+                        <p class="line-1 id="anim-typewriter">
+                            Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬..
 Born and raised in Birmingham and now based in London.
 I got my degree in Music and Theatre in 2014 🎓 and since then have worked a variety of office jobs such as HR and project coordinator for varies companies. 
 Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain to train with _Nology to become a Software developer.</p>
