--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                                     <h2>Client Project: Shift Reporter</h2>
                                 </header>
 
-                                    <div class="card-picture">
+                                    <div class="card-author">
                                         <a href=https://shiftreporter-3420e.web.app/ target="_blank">
                                             <i class="fab fa-react fa-3x"></i>   
                                         </a>
@@ -136,7 +136,7 @@
                                             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
                                           </svg> -->
                                           <i class="fab fa-js fa-3x"></i> 
-                                         <img src="morse-pic.jpg" class="card-picture"/>
+                                         <!-- <img src="morse-pic.jpg" class="card-picture"/> -->
                                         
                                     </div>
                             </article>
