--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
              <section id="" class="landing"> 
                      <section class="power-btn"></section>  
                      <a target="" href="#button" id="button">&#xF011;</a><span class="light"></span>  
-                     <img src="BW-ME.jpg" class="me" alt=""> 
+                     <img src="BW-ME.jpg" class="responsive" id="me"/> 
                     <h1 class="neon-heading first" id="h1Id"><span class="flickering-2">Steve </span><span class="flickering-1">Shackleton  </span><br><span class="flickering-3">Junior Developer</span></h1>
                     <h1 class="neon-heading-second"></h1>
                     </div>
@@ -191,13 +191,15 @@
                     </article>
                     <article id="about-box">
                         <br></br>
-                        <p class="line" id="anim-typewriter">
+                        <div class="line" id="anim-typewriter">
+                        <p >
                             Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬..
 Born and raised in Birmingham and now based in London.
 I got my degree in Music and Theatre in 2014 🎓 and since then have worked a variety of office jobs such as HR and project coordinator for varies companies. 
 Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain to train with _Nology to become a Software developer.</p>
                         </p>
-                        <img src="Birmingham5thDec200740.jpg" class="Birmingham">
+                    </div>
+                        <img src="Birmingham5thDec200740.jpg" class="responsive" id="Birmingham"/>
                     </div>
                 </article>
                     
@@ -248,7 +250,7 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
                     </footer>
                 </section>
             </div>
-            <div class="contact-form">  
+            <div class="responsive"id="contact">  
                 <form action="https://getform.io/f/86fadaa4-1eed-478b-a39f-546ed38eb4fc" method="POST">
                   <fieldset>
                     <input placeholder="Your name" type="text" tabindex="1" name="name" required >
