Shift-Reporter Link fix 1

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                                 </header>
 
                                     <div class="card-author">
-                                        <a href=https://shiftreporter-3420e.web.app/ target="_blank">
+                                        <a href="https://shiftreporter-3420e.web.app/" target="_blank">
                                             <i class="fab fa-react fa-3x"></i>   
                                         </a>
                                         <!-- <svg class="half-circle" viewBox="0 0 106 20">
@@ -247,10 +247,9 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
                             <i class="fas fa-envelope-square fa-3x"></i>
                         </a>
                         </div>
-                    </footer>
                 </section>
             </div>
-            <div class="responsive"id="contact">  
+            <div class="contact"id="">  
                 <form action="https://getform.io/f/86fadaa4-1eed-478b-a39f-546ed38eb4fc" method="POST">
                   <fieldset>
                     <input placeholder="Your name" type="text" tabindex="1" name="name" required >
@@ -279,4 +278,7 @@ Now in the life changing year of 2020 I've taken the leap to combine my innate c
             
         </body>
         <script src="main.js"></script>
+        <footer>
+
+        </footer>
 </html>
