Edited project card details for iphone Calculator

--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
 
                             <article class= "card">
                                 <header class="card-header">
-                                    <p>This project is a fully functioning calculator modeled on the iphone calculator</p>
-                                    <h2>JS iPhone Calculator</h2>
-
+                                    <p>This is a fully functioning calculator styled like the one on the iphone, the logic was created in JS and the styling is basic CSS.</p>
+                                    <h2>iPhone Calculator: JS Project</h2>
                                     <div class="card-author">
                                         <a href=https://iphone-calculator.shackdev.com target="_blank">
                                             <i class="fab fa-js fa-3x"></i>    
