--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </nav>
         </section>
     </header>
-<body>
+<body class="body-style">
     <!-- <div class="background-box" id="image-container">
     
 </div> -->
