"removed target value on button"

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             
             <!-- <a id="go-home"></a> -->
              <section id="responsive" class="landing">   
-                     <a target="" href="#button" id="button">&#xF011;</a><span class="light"></span>  
+                     <a class="button" id="button">&#xF011;</a><span class="light"></span>  
                      <img src="BW-ME.jpg" class="responsive" id="me"/> 
                     <h1 class="neon-heading first" id="h1Id"><span class="flickering-2">Steve </span><span class="flickering-1">Shackleton  </span><br><span class="flickering-3">Junior Developer</span></h1>
                     <h1 class="neon-heading-second"></h1>
