--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
             <!-- <a id="go-home"></a> -->
              <section id="responsive" class="landing">   
                      <a class="button" id="button">&#xF011;</a><span class="light"></span>  
+                      <section id="picchange">
                      <img src="BW-ME.jpg" class="responsive" id="me"/> 
+                    </section>
                     <h1 class="neon-heading first" id="h1Id"><span class="flickering-2">Steve </span><span class="flickering-1">Shackleton  </span><br><span class="flickering-3">Junior Developer</span></h1>
                     <h1 class="neon-heading-second"></h1>
                     </div>
@@ -194,8 +196,10 @@
                             Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬.. Born and raised in Birmingham and now based in London. I got my degree in Music and Theatre in 2014 🎓 and since then have worked a variety of office jobs such as HR and project coordinator for varies companies. Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain to train with _Nology to become a Software developer.</p>
                         </p>
                     </div>
+                    <section id="picchange">
                         <img src="Birmingham5thDec200740.jpg" class="responsive" id="Birmingham"/>
                         <img src="London.jpeg" class="responsive" id="London"/>
+                    </section>
                     </div>
                 </article>
                     
