ShiftReporter Link changes

--- a/index.html
+++ b/index.html
@@ -77,12 +77,10 @@
                                 </header>
 
                                     <div class="card-author">
-                                        <a href="https://shiftreporter-3420e.web.app/" target="_blank">
+                                        <a href="https://shiftreporter-3420e.web.app" target="_blank">
                                             <i class="fab fa-react fa-3x"></i>   
                                         </a>
-                                        <!-- <svg class="half-circle" viewBox="0 0 106 20">
-                                            <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
-                                          </svg> -->
+                                        
                                         <!-- <img src="Shift-Reporter.png" class="cover"/ > -->
                                     </div>
                             </article>
@@ -94,13 +92,13 @@
                                 
 
                                     <div class="card-author">
-                                        <!-- <a href=https://shiftreporter-3420e.web.app/ target="_blank"> -->
-                                            <i class="fab fa-react fa-3x"></i>   
+                                        <!-- <a href=https://shiftreporter-3420e.web.app/ target="_blank"> -->  
                                         </a>
                                         <!-- <svg class="half-circle" viewBox="0 0 106 20">
                                             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
                                           </svg> -->
                                         <!-- <img src="Shift-Reporter.png" class="cover" /> -->
+                                        <i class="fab fa-react fa-3x"></i> 
                                     </div>
                             </article>
 
@@ -111,9 +109,9 @@
                                 </header>
 
                                 <div class="card-author">
-                                        <a href=https://inspector-morse-code-translator.shackdev.com target="_blank">
-                                            <i class="fab fa-js fa-3x"></i>    
+                                        <a href=https://inspector-morse-code-translator.shackdev.com target="_blank">  
                                         </a>
+                                        <i class="fab fa-js fa-3x"></i>  
                                     </div>
                                 </article>
 
@@ -124,13 +122,12 @@
                                 </header>
 
                                     <div class="card-author">
-                                        <a href=https://dicegame.shackdev.com target="_blank">
-                                            <i class="fab fa-js fa-3x"></i>   
+                                        <a href=https://dicegame.shackdev.com target="_blank">  
                                         </a>
                                         <!-- <svg class="half-circle" viewBox="0 0 106 20">
                                             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
                                           </svg> -->
-                                         <!-- <img src="morse-pic.jpg" /> -->
+                                          <i class="fab fa-js fa-3x"></i>  
                                     </div>
                             </article>
 
@@ -140,8 +137,8 @@
                                     <h2>iPhone Calculator: JS Project</h2>
                                     <div class="card-author">
                                         <a href=https://iphone-calculator.shackdev.com target="_blank">
-                                            <i class="fab fa-js fa-3x"></i>    
                                         </a>
+                                        <i class="fab fa-js fa-3x"></i> 
                                     </div>
                             </article>
 
@@ -240,7 +237,6 @@
                             <i class="fas fa-envelope-square fa-3x"></i>
                         </a>
                         </div>
-                </section>
             </div>
             <div class="contact"id="">  
                 <form action="https://getform.io/f/86fadaa4-1eed-478b-a39f-546ed38eb4fc" method="POST">
