Fixed broken links

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
                                 </header>
 
                                 <div class="card-author">
-                                        <a href=https://inspector-morse-code-translator.shackdev.com target="_blank">  
+                                        <a href=https://inspector-morse-code-translator.shackdev.com target="__blank">  
+                                            <i class="fab fa-js fa-3x"></i>  
                                         </a>
-                                        <i class="fab fa-js fa-3x"></i>  
+                                        
                                     </div>
                                 </article>
 
@@ -122,12 +123,12 @@
                                 </header>
 
                                     <div class="card-author">
-                                        <a href=https://dicegame.shackdev.com target="_blank">  
+                                        <a href=https://dicegame.shackdev.com target="__blank">  
+                                            <i class="fab fa-js fa-3x"></i>
                                         </a>
                                         <!-- <svg class="half-circle" viewBox="0 0 106 20">
                                             <path d="M102 4c0 27.1-21.9 49-49 49S4 31.1 4 4"></path>
-                                          </svg> -->
-                                          <i class="fab fa-js fa-3x"></i>  
+                                          </svg> -->      
                                     </div>
                             </article>
 
@@ -136,9 +137,10 @@
                                     <p>This is a fully functioning calculator styled like the one on the iphone, the logic was created in JS and the styling is basic CSS.</p>
                                     <h2>iPhone Calculator: JS Project</h2>
                                     <div class="card-author">
-                                        <a href=https://iphone-calculator.shackdev.com target="_blank">
+                                        <a href=https://iphone-calculator.shackdev.com target="__blank">
+                                            <i class="fab fa-js fa-3x"></i> 
                                         </a>
-                                        <i class="fab fa-js fa-3x"></i> 
+                                        
                                     </div>
                             </article>
 
