typing animation fix

--- a/index.html
+++ b/index.html
@@ -70,14 +70,14 @@
                           <section class= "card-list">
                             <article class= "card">
                                 <header class="card-header">
-                                    <p>This is a group client project we created in React. The fully functioning  mining management system app, for a South African mining consultancy will help
+                                    <p>This is a group client project that we created in React. The fully functioning  mining management system app, for a South African mining consultancy will help
                                         improve employees safety, as well as serving companies by making the tracking of their costs and
                                         statistics simpler. </p>
                                     <h2>Client Project: Shift Reporter</h2>
                                 </header>
 
                                     <div class="card-author">
-                                        <a href="https://shiftreporter-3420e.web.app" target="_blank">
+                                        <a href="https://shiftreporter-3420e.web.app" target="__blank">
                                             <i class="fab fa-react fa-3x"></i>   
                                         </a>
                                         
@@ -175,15 +175,9 @@
                         <br></br>
                         <div class="line" id="anim-typewriter">
                         <p>
-                            Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬.. Born and raised in Birmingham and now based in London. 
-                        </p>
-                        </div>
-                            <div class="line" id="anim-typewriter">
-                            <p>I got my degree in Music and Theatre in 2014 🎓 and since then have worked a variety of office jobs such as HR and project coordinator for varies companies.
-                            </p>
-                          </div>
-                            <div class="line" id="anim-typewriter">
-                            <p> Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain to train with _Nology to become a Software developer.
+                            Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬.. Born and raised in Birmingham and now based in London. <br>
+                            I got my degree in Music and Theatre in 2014 🎓 and since then have worked a variety of office jobs such as HR and project coordinator for varies companies.<br>
+                             Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain to train with _Nology to become a Software developer.
                         </p>
                     </div>
                     <section id="picchange">
