--- a/index.html
+++ b/index.html
@@ -234,7 +234,10 @@
                         </a>
                         </div>
             </div>
+        </section>
             <div class="contact"id="">  
+                <br>
+                <br>
                 <form action="https://getform.io/f/86fadaa4-1eed-478b-a39f-546ed38eb4fc" method="POST">
                   <fieldset>
                     <input placeholder="Your name" type="text" tabindex="1" name="name" required >
