--- a/index.html
+++ b/index.html
@@ -116,15 +116,15 @@
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/morse-pic.jpg" alt="">
-                        <a href=https://inspector-morse-code-translator.shackdev.com target="__blank"></a>
+                        <a href="https://inspector-morse-code-translator.shackdev.com" target="__blank"></a>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/High-Roller-Img.png" alt="">
-                        <a href=https://dicegame.shackdev.com target="__blank"></a>
+                        <a href="https://dicegame.shackdev.com" target="__blank"></a>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/iPhone-Calculator.jpg" alt="">
-                        <a href=https://iphone-calculator.shackdev.com target="__blank"></a>
+                        <a href="https://iphone-calculator.shackdev.com" target="__blank"></a>
                     </div>
                     <!-- <div class="projects__img">
                         <img src="assets/img/work5.jpg" alt="">
