favicon icon added

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             crossorigin="anonymous"></script>
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+<!-- ====FAVICON==== -->
+<link rel="shortcut icon" type="image/jpg" href="assets/img/favicon-32x32.png"/>
         <!-- =====BOX ICONS===== -->
         <link href='https://cdn.jsdelivr.net/npm/boxicons@2.0.5/css/boxicons.min.css' rel='stylesheet'>
 
