portfolio button changes

--- a/index.html
+++ b/index.html
@@ -116,22 +116,22 @@
                         <img src="assets/img/Shift-Reporter.png" alt="" >
                             <br>
                             <p class="projects__para">Shift Reporter-Client Project</p><i class="fab fa-react fa-3x"></i>
-                            <a href="https://shiftreporter-3420e.web.app" target="_blank" class="button">Open</a>
+                            <a href="https://shiftreporter-3420e.web.app" target="_blank" class="button">View <i class="far fa-eye"></i></a>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/morse-pic.jpg" alt="">
                         <p class="projects__para">Inspector Morse-Code Translator </p><i class="fab fa-js fa-3x"></i> 
-                        <a href="https://inspector-morse-code-translator.shackdev.com" target="_blank" class="button">Open</a>
+                        <a href="https://inspector-morse-code-translator.shackdev.com" target="_blank" class="button">View <i class="far fa-eye"></i></a>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/High-Roller-Img.png" alt="">
                         <p class="projects__para">High Roller-Dice Game </p><i class="fab fa-js fa-3x"></i> 
-                        <a href="https://dicegame.shackdev.com" target="_blank"class="button">Open</a>
+                        <a href="https://dicegame.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/iPhone-Calculator.jpg" alt="">
                         <p class="projects__para">iPhone Calculator </p><i class="fab fa-js fa-3x"></i>
-                        <a href="https://iphone-calculator.shackdev.com" target="_blank"class="button">Open</a> 
+                        <a href="https://iphone-calculator.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
                     </div>
                     <!-- <div class="projects__img">
                         <img src="assets/img/work5.jpg" alt="">
