--- a/index.html
+++ b/index.html
@@ -117,22 +117,25 @@
                             <br>
                             <p class="projects__para">Shift Reporter-Client Project</p><i class="fab fa-react fa-3x"></i>
                             <a href="https://shiftreporter-3420e.web.app" target="_blank" class="button">View <i class="far fa-eye"></i></a>
-                            <p>For the live demo of our client project use the following login details: Username: 5001 Password: 5001login</p>
+                            <p>For the live demo of the project use the following login details: Username: 5001 Password: 5001login</p>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/morse-pic.jpg" alt="">
                         <p class="projects__para">Inspector Morse-Code Translator </p><i class="fab fa-js fa-3x"></i> 
                         <a href="https://inspector-morse-code-translator.shackdev.com" target="_blank" class="button">View <i class="far fa-eye"></i></a>
+                            <p>An Inspector Morse themed JavaScript morse code translator complete with soundbites</p>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/High-Roller-Img.png" alt="">
                         <p class="projects__para">High Roller-Dice Game </p><i class="fab fa-js fa-3x"></i> 
                         <a href="https://dicegame.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a>
+                        <p>High rolling dice fun which works using JavaScript's math.random to generate dice rolls, full game rules are in the app</p>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/iPhone-Calculator.jpg" alt="">
                         <p class="projects__para">iPhone Calculator </p><i class="fab fa-js fa-3x"></i>
                         <a href="https://iphone-calculator.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
+                        <p>Classic calculator modelled after the one found on the iPhone</p>
                     </div>
                     <!-- <div class="projects__img">
                         <img src="assets/img/work5.jpg" alt="">
