lowercase password instructions added for ShiftReporter

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <br>
                             <p class="projects__para">Shift Reporter-Client Project</p><i class="fab fa-react fa-3x"></i>
                             <a href="https://shiftreporter-3420e.web.app" target="_blank" class="button">View <i class="far fa-eye"></i></a>
-                            <p>For the live demo of the project use the following login details: Username: 5001 Password: 5001login</p>
+                            <p>For the live demo of the project use the following login details in lowercase: Username: 5001 Password: 5001login </p>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/morse-pic.jpg" alt="">
