p tag font changes

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             crossorigin="anonymous"></script>
             <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 <!-- ====FAVICON==== -->
 <link rel="shortcut icon" type="image/jpg" href="assets/img/favicon-32x32.png"/>
         <!-- =====BOX ICONS===== -->
@@ -76,7 +78,7 @@
                         <h2 class="about__subtitle">A little About Me...</h2>
                         <p class="about__text">Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬.. Born and raised in Birmingham and now based in London. <br>
                             I graduated with a degree in Music and Theatre in 2014 🎓. Since then I've worked in a variety of roles including Finance, HR and Project Management for several companies, operating within different industries.<br>
-                             Now in the life changing year of 2020 I've taken the leap to combine my innate creativity with my natural tech minded brain and trained with _Nology to become a Software developer.</p>           
+                             Last year in 2020 I took the leap to combine my innate creativity and naturally tech minded brain and trained with _Nology to become a Software Developer.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -117,7 +119,7 @@
                             <br>
                             <p class="projects__para">Shift Reporter-Client Project</p><i class="fab fa-react fa-3x"></i>
                             <a href="https://shiftreporter-3420e.web.app" target="_blank" class="button">View <i class="far fa-eye"></i></a>
-                            <p>For the live demo of the project use the following login details in lowercase: Username: 5001 Password: 5001login </p>
+                            <p>For the live demo of the project use the following login details: <em>Username:</em> 5001<em> Password:</em> 5001login </p>
                     </div>
                     <div class="projects__img">
                         <img src="assets/img/morse-pic.jpg" alt="">
