Added Pong Python project

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                         <h2 class="about__subtitle">A little About Me...</h2>
                         <p class="about__text">Hi I'm Steve Shackleton 👋 Junior Software Developer 💻.. gym enthusiast 🏋️‍♂️.. dog lover 🐕..music maker 🎧.. thespian 🎬.. Born and raised in Birmingham and now based in London. <br>
                             I graduated with a degree in Music and Theatre in 2014 🎓. Since then I've worked in a variety of roles including Finance, HR and Project Management for several companies, operating within different industries.<br>
-                             Last year in 2020 I took the leap to combine my innate creativity and naturally tech minded brain and trained with _Nology to become a Software Developer.</p>           
+                             Last year in 2020 I took the leap to combine my innate creativity and natural tech mind and trained with _Nology to become a Software Developer.</p>           
                     </div>                                   
                 </div>
             </section>
@@ -137,7 +137,13 @@
                         <img src="assets/img/iPhone-Calculator.jpg" alt="">
                         <p class="projects__para">iPhone Calculator </p><i class="fab fa-js fa-3x"></i>
                         <a href="https://iphone-calculator.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
-                        <p>Classic calculator modelled after the one found on the iPhone</p>
+                        <p>Classic calculator modelled on the one found on the iPhone</p>
+                    </div>
+                    <div class="projects__img">
+                        <img src="assets/img/Pong-Python.png" alt="">
+                        <p class="projects__para">Pong game made in Python </p><i class="fab fa-python fa-3x"></i>
+                        <a href="https://pong-python-game.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
+                        <p>Classic Pong game created in Python <em>Player 1 controls:</em> w, s <em>Player 2 controls:</em> up arrow, down arrow</p>
                     </div>
                     <!-- <div class="projects__img">
                         <img src="assets/img/work5.jpg" alt="">
