Removed Pong Python project to fix 404 error

--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
                         <a href="https://iphone-calculator.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
                         <p>Classic calculator modelled on the one found on the iPhone</p>
                     </div>
-                    <div class="projects__img">
+                    <!-- <div class="projects__img">
                         <img src="assets/img/Pong-Python.png" alt="">
                         <p class="projects__para">Pong game made in Python </p><i class="fab fa-python fa-3x"></i>
                         <a href="https://pong-python-game.shackdev.com" target="_blank"class="button">View <i class="far fa-eye"></i></a> 
                         <p>Classic Pong game created in Python <em>Player 1 controls:</em> w, s <em>Player 2 controls:</em> up arrow, down arrow</p>
-                    </div>
+                    </div> -->
                     <!-- <div class="projects__img">
                         <img src="assets/img/work5.jpg" alt="">
                     </div>
